Fix footer overlap on index.html

--- a/static/style.css
+++ b/static/style.css
@@ -115,6 +115,9 @@ header a:nth-of-type(1) {
     padding: 10px;
 }
 
+.listing-container:last-of-type {
+    margin-bottom: 100px;
+}
 .card-space-price {
     margin-left: auto;
     margin-top: 0px;
@@ -227,7 +230,6 @@ h3, h5 {
     background-color: #007bff;
     border-color: #007bff;
 }
-
 
 footer {
     margin-top: 50px;
